# Restaurant-Supplier-Platform

Client/RestaurantSupplierClient/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Client/RestaurantSupplierClient/logic/: inputvalidator.cpp  inputvalidator.h  messagebuilder.cpp  messagebuilder.h  messagetypes.h  validationresult.h
RestaurantSupplierClient/: RestaurantSupplierClient.pro  chatclient.cpp  chatclient.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Server/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Server/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
Server/milestone2lab_autogen/: deps  moc_predefs.h
Server/milestone2lab_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
milestone2lab/: CMakeLists.txt
